TerraformCode/V1-EC2.tf

provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "appserver" {
  ami           = "ami-0c101f26f147fa7fd"
  instance_type = "t2.micro"
  key_name      = "awsproj"
}
